# clearrread-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  document_service.py  main.py  models.py  pyproject.toml  routes.py  text_converter.py
